<resources>
    <string name="app_name">ProvaMaps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="afegir_zona_mapa">Afegir una zona al mapa</string>
    <string name="font">Font</string>
    <string name="contenidor">Contenidor</string>
    <string name="lavabo_public">Lavabo públic</string>
    <string name="zona_picnic">Zona pícnic</string>

    <string name="cancelar">Cancelar</string>
    <string name="penja_una_imatge">Penja una imatge:</string>
    <string name="afegir_imatge">Afegir imatge</string>
    <string name="caracteristiques">Característiques:</string>
    <string name="afegir">Afegir</string>

    <string name="afegir_font">Afegir una font</string>
    <string name="penja_imatge_font_desc">Fes una imatge a la font on es vegi correctament. Procura fer-la des de la distància correcte, ni molt aprop ni molt lluny. I amb una bona il·luminació.</string>
    <string name="escull_una_opcio_categoria">Escull una opció de cada categoria.</string>
    <string name="potable">Potable</string>
    <string name="no_potable">No Potable</string>
    <string name="sense_informacio">Sense informació</string>
    <string name="estat">Estat</string>
    <string name="en_servei">En servei</string>
    <string name="sense_servei">Sense servei</string>
    <string name="localitzacio_font">Localització de la font:</string>
    <string name="informacio_mapa_font">El mapa indica la posició on guardarà la font. Si és incorrecte, prem cancelar i torna-ho a intentar.</string>

    <string name="afegir_contenidor">Afegir un contenidor</string>
    <string name="penja_imatge_contenidor_desc">Fes una imatge al contenidor on es vegi correctament, si n\\\'hi ha més d\\\'un procura que es vegin tots. Procura fer-la des de la distància correcte, ni molt aprop ni molt lluny. I amb una bona il·luminació.</string>
    <string name="selecciona_tipus_contenidor">Selecciona els tipus de contenidors que hi ha a la posició on et trobes.</string>
    <string name="tipus_contenidor">Tipus de contenidor</string>
    <string name="vidre">Vidre</string>
    <string name="paper_cartro">Paper i cartró</string>
    <string name="envasos">Envasos</string>
    <string name="roba">Roba</string>
    <string name="organic">Orgànic</string>
    <string name="rebuig">Rebuig</string>
    <string name="paperera">Paperera</string>
    <string name="localitzacio_contenidor">Localització del contenidor:</string>
    <string name="informacio_mapa_contenidor">El mapa indica la posició on guardarà el contenidor. Si és incorrecte, prem cancelar i torna-ho a intentar.</string>

    <string name="informacio_mapa_lavabo">El mapa indica la posició on guardarà el lavabo. Si és incorrecte, prem cancelar i torna-ho a intentar.</string>
    <string name="localitzacio_lavabo">Localització del lavabo:</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="disposa_pica">Disposa de pica?</string>
    <string name="disposa_paper">Disposa de paper higiènic?</string>
    <string name="tipus_lavabo">Tipus de lavabo</string>
    <string name="caracteristiques_lavabo">Escull les opcions de cada categoria segons com sigui la zona de lavabos.</string>
    <string name="penja_imartge_lavabo_desc">Fes una imatge al lavabo on es vegi correctament. Procura fer-la des de la distància correcte, ni molt aprop ni molt lluny. I amb una bona il·luminació.</string>
    <string name="afegir_lavabo">Afegir un lavabo</string>

    <string name="afegir_picnic">Afegir una zona de pícnic</string>
    <string name="informacio_mapa_picnic">El mapa indica la posició on guardarà la zona de pícnic. Si és incorrecte, prem cancelar i torna-ho a intentar.</string>
    <string name="localitzacio_picnic">Localització de la zona de pícnic:</string>
    <string name="penja_imatge_picnic_desc">Fes una imatge a la zona de pícnics on es vegi correctament, si ocupa una zona àmplia, fes la foto que representi millor la zona. Procura fer-la des de la distància correcte, ni molt aprop ni molt lluny. I amb una bona il·luminació.</string>
    <string name="hiha_bancs_io_taules">Hi ha bancs i/o taules?</string>
    <string name="bancs">Bancs</string>
    <string name="taules">Taules</string>
    <string name="bancs_i_taules">Bancs i taules</string>
    <string name="que_hiha">Que hi ha?</string>

    <string name="pagina_inici">Pagina inici</string>
    <string name="pagina_configuracio">Pagina configuració</string>
    <string name="pagina_perfil">Pagina perfil</string>

    <string name="perfil">Perfil</string>
    <string name="inici">Mapa</string>
    <string name="configuracio">Configuració</string>
    <string name="descripcioImatgeAfegir">Imatge afegir al punt</string>
    <string name="descripcioImatgeMapa">Imatge de la posicio del punt al mapa</string>

    <string name="buscar">Buscar:</string>

    <!-- Preference Titles -->
    <string name="els_teus_punts">Publicacions</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">NomAPP</string> <!-- CANVIAR I POSAR EL NOM DE L'APLICACIO-->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="usuari">Usuari</string>

    <string name="nom_usuari">Nom usuari</string>
    <string name="correu_usuari">nomusuari@gmail.com</string>
    <string name="continuar">Continuar</string>
    <string name="benvingut">Benvingut</string>
    <string name="aparenca">Aparença</string>
    <string name="canvi_idioma">Canviar l\'idioma</string>
    <string name="sessio_google">Sessió de Google</string>
    <string name="tancar_sessio">Tancar sessió</string>
    <string name="eliminar_compte">Eliminar compte</string>
    <string name="canvi_mode_fosc">Canviar a mode fosc</string>


    <string name="altres">Altres</string>
    <string name="faqs">FAQ\'s</string>
    <string name="adrecanodisponible">Adreça no disponible</string>
    <string name="adreca">Adreça: </string>
    <string name="informacio">Informació:</string>
    <string name="anarhi">Anar-hi</string>
    <string name="apar">Aparença</string>
    <string name="apare">Aparença</string>
    <string name="aparen">Aparença</string>




    <string name="informacio_invitat">Com a invitat només podràs veure el mapa i els punts. Inicia sessió per poder afegir punts d\'interès.</string>
    <string name="iniciar_amb_google">Iniciar sessió</string>

    <string name="modificar">Modificar</string>

    <string name="atencio">Atenció</string>
    <string name="infosessio">Per a accedir a aquesta part de l\'aplicació s\'ha de tenir un compte. Inicia sessió ara, o torna al mapa.</string>
    <string name="tornarmapa">Tornar al mapa</string>


    <string name="lat">Latitud: </string>
    <string name="lon">Longitud: </string>





    <string name="contrasenya">Contrasenya</string>

    <string name="entrar">Entrar</string>
    <string name="enta_amb">o entra amb</string>
    <string name="entrar_com_invitat">Entrar com a invitat</string>

</resources>