<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".EditFontFragment"
android:id="@+id/editarFont"
android:background="@color/fons">

<!-- LinearLayout global. -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- LinearLayout de la cabecera. Contiene el título y el botón de cancelar. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/fons_titol">

        <TextView
            android:id="@+id/tv_TitolEditFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editarfont"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/boto_tancar_edit_font"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/cancelar2"
            android:text="@string/cancelar"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- LinearLayout que contiene el contenido de la imagen -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_penjaImatgeEditFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/penja_una_imatge" />

        <TextView
            android:id="@+id/tv_descPenjaImatgeEditFont"
            android:layout_marginHorizontal="12dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/penja_imatge_font_desc" />

        <ImageView
            android:id="@+id/iv_imatgeEditFont"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:contentDescription="@string/descripcioImatgeAfegir"
            android:src="@drawable/icona_imatge"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginTop="14dp"
            android:background="@color/fons_titol"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/afegir_imatge"
                android:layout_marginHorizontal="10dp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:id="@+id/boto_afegirImatgeEditFont"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingHorizontal="2dp"
                android:layout_marginTop="5dp"
                android:drawableBottom="@drawable/icona_fer_foto"
                android:id="@+id/boto_ferFotoEditFont"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.51dp"
        android:layout_marginVertical="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_caracteristiquesEditFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/caracteristiques" />

    <TextView
        android:id="@+id/tv_descCaracteristiquesEditFont"
        android:layout_marginHorizontal="12dp"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/escull_una_opcio_categoria" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/potable"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="16sp"/>

    <!-- ToggleGroup de potable -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tggb_fontPotable"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        app:checkedButton="@id/boto_tggb_noInformaciofontPotable"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boto_tggb_fontPotable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potable"
            style="?attr/materialButtonOutlinedStyle"
            android:ellipsize="end"
            android:maxLines="1"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boto_tggb_fontNoPotable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/no_potable"
            android:ellipsize="end"
            android:maxLines="1"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boto_tggb_noInformaciofontPotable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sense_informacio"
            style="?attr/materialButtonOutlinedStyle"
            android:ellipsize="end"
            android:maxLines="1"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/estat"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="16sp"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tggb_fontEstat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:layout_gravity="center"
        app:checkedButton="@id/boto_tggb_fontServei"
        app:singleSelection="true">

        <Button
            android:id="@+id/boto_tggb_fontServei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_servei"
            style="?attr/materialButtonOutlinedStyle"
            android:ellipsize="end"
            android:maxLines="1"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/boto_tggb_fontNoServei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sense_servei"
            style="?attr/materialButtonOutlinedStyle"
            android:ellipsize="end"
            android:maxLines="1"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/boto_tggb_fontNoInformacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sense_informacio"
            style="?attr/materialButtonOutlinedStyle"
            android:ellipsize="end"
            android:maxLines="1"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/actualitzar"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/boto_afegir_afegirFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/actualitzar"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@color/blau_pred"
        android:textColor="@color/white"
        android:drawableStart="@drawable/icona_afegir"
        android:drawablePadding="8dp"
        android:padding="10dp" />
</LinearLayout>
</ScrollView>
