<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/fons"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:scaleType="fitXY"
        android:src="@drawable/daltlogin"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logorodo" />

        <TextView
            android:id="@+id/tv_resposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/benvingut"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:paddingHorizontal="10dp"/>

        <TextView
            android:id="@+id/tv_informatiu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/informacio_invitat"
            android:textAlignment="center"
            android:textColor="@color/blau_pred"
            android:textSize="18sp"
            android:paddingHorizontal="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogle"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:backgroundTint="@android:color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <Button
            android:id="@+id/buttoninv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:padding="6dp"
            android:background="@drawable/boto_rodo"
        android:textColor="@android:color/white"
        android:text="@string/entrar_com_invitat"
        android:elevation="4dp"
        android:textSize="16sp"
        android:layout_marginBottom="100dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/footer_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/fonslogo"
        android:adjustViewBounds="true"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>